--- a/Project/frontend/src/index.html
+++ b/Project/frontend/src/index.html
@@ -4,10 +4,136 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto Santana</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <title>GamingForever</title>
+    <script type="module" src="app.js"></script>
 </head>
 <body>
-    <h1>PROYECTOSANTANA</h1>
-    <p1>No me queme polfavo</p1>
+    <div class="grid-container">
+        <header>
+            <div class="brand">
+                <a href="/#/">GamingForever</a>
+            </div>
+            <div>
+                <a href="/#/signin">Iniciar Sesion</a>
+                <a href="/#/">Cart</a>
+            </div>
+        </header>
+        <main id="main-container">
+            <div>
+                <ul class="products">
+                    <li>
+                        <div class="product">
+                            <a href="/#/product/1">
+                                <img src="/images/product-1.jpg" alt="product 1"/>
+                            </a>
+                            <div class="product-name">
+                                <a href="/#/product/1">
+                                    Fit Slim Shirt
+                                </a>
+                            </div>
+                            <div class="product-brand">
+                                Nike
+                            </div>
+                            <div class="product-price">
+                                $59
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="product">
+                            <a href="/#/product/1">
+                                <img src="/images/product-1.jpg" alt="product 1"/>
+                            </a>
+                            <div class="product-name">
+                                <a href="/#/product/1">
+                                    Fit Slim Shirt
+                                </a>
+                            </div>
+                            <div class="product-brand">
+                                Nike
+                            </div>
+                            <div class="product-price">
+                                $59
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="product">
+                            <a href="/#/product/1">
+                                <img src="/images/product-1.jpg" alt="product 1"/>
+                            </a>
+                            <div class="product-name">
+                                <a href="/#/product/1">
+                                    Fit Slim Shirt
+                                </a>
+                            </div>
+                            <div class="product-brand">
+                                Nike
+                            </div>
+                            <div class="product-price">
+                                $59
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="product">
+                            <a href="/#/product/1">
+                                <img src="/images/product-1.jpg" alt="product 1"/>
+                            </a>
+                            <div class="product-name">
+                                <a href="/#/product/1">
+                                    Fit Slim Shirt
+                                </a>
+                            </div>
+                            <div class="product-brand">
+                                Nike
+                            </div>
+                            <div class="product-price">
+                                $59
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="product">
+                            <a href="/#/product/1">
+                                <img src="/images/product-1.jpg" alt="product 1"/>
+                            </a>
+                            <div class="product-name">
+                                <a href="/#/product/1">
+                                    Fit Slim Shirt
+                                </a>
+                            </div>
+                            <div class="product-brand">
+                                Nike
+                            </div>
+                            <div class="product-price">
+                                $59
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="product">
+                            <a href="/#/product/1">
+                                <img src="/images/product-1.jpg" alt="product 1"/>
+                            </a>
+                            <div class="product-name">
+                                <a href="/#/product/1">
+                                    Fit Slim Shirt
+                                </a>
+                            </div>
+                            <div class="product-brand">
+                                Nike
+                            </div>
+                            <div class="product-price">
+                                $59
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+    </main>
+        <footer>All rights reserved @2023</footer>
+    </div>   
 </body>
 </html>
